@@ -14,11 +14,13 @@ ChangeLog for PyLint
     * #100654: fix grammatical error for W0332 message (using 'l' as
       long int identifier)
 
+    * #103656: fix W0231 false positive for missing call to object.__init__
+      (patch by lothiraldan@gmail.com)
+
     * fix cross-interpreter issue (non compatible access to __builtins__)
 
     * stop including tests files in distribution, they causes crash when
       installed with python3 (#72022, #82417, #76910)
-
 
 2012-07-17  --  0.25.2
     * #93591: Correctly emit warnings about clobbered variable names when an
